test_regress/t/t_vlt_syntax_bad.vlt
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed into the Public Domain, for any use,
// without warranty, 2010 by Wilson Snyder.

`verilator_config

public -module "t" @(posedge clk)
isolate_assignments -module "t"
